<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:paddingRight="10dp"
        android:elevation="3dp">
    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/img_photo"
        android:text="@string/movie"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/durations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="26dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/duration"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/txt_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/durations"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/time" />
    <TextView
        android:id="@+id/Genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_duration"
        android:layout_marginStart="26dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:text="@string/genre"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/txt_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Genres"
        android:layout_marginStart="26dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/_genre" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>